--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@babel/runtime-corejs3": "^7.10.2",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.13.2",
     "swiper": "^5.4.3",
     "vue": "^2.6.11",
